--- a/NetCoreVideoUpload/NetCoreVideoUpload.csproj
+++ b/NetCoreVideoUpload/NetCoreVideoUpload.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\DownloadVideos\" />
+    <Folder Include="wwwroot\UploadedVideos\" />
   </ItemGroup>
 
 </Project>
