--- a/NetCoreVideoUpload/appsettings.json
+++ b/NetCoreVideoUpload/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VideoUploadContext": "Server=(localdb)\\mssqllocaldb;Database=NetCoreVideoUploadProject;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "VideoUploadContext": "Data Source=PF286P6K;Integrated Security=True;Database=NetCoreVideoUploadProject;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+
   }
 }
