--- a/NetCoreVideoUpload/appsettings.json
+++ b/NetCoreVideoUpload/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VideoUploadContext": "Data Source=PF286P6K;Integrated Security=True;Database=NetCoreVideoUploadProject;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "VideoUploadContext": "Data Source=OFFICE;Integrated Security=True;Database=NetCoreVideoUploadProject;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 
   }
 }
